:bug:correction spinner animation visibility

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,15 +20,26 @@
 @keyframes visibility-filter {
   0% {
     visibility: visible;
-    opacity: 0.6;
+    opacity: 0.7;
   }
   99% {
     visibility: visible;
-    opacity: 0.6;
+    opacity: 0.7;
   }
   100% {
     visibility: hidden;
     opacity: 0;
+  }
+}
+@keyframes visibility-spinner {
+  0% {
+    visibility: visible;
+  }
+  99% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
   }
 }
 .full-heart {
@@ -194,7 +205,7 @@ a {
   left: 50%;
   transform: translate(-50%, -40%);
   transition: transform 0.4s cubic-bezier(0.23, 1.83, 0.42, 1.19);
-  animation: visibility-filter 3s linear 1 forwards;
+  animation: visibility-spinner 3s linear 1 forwards;
 }
 .spinner__circle {
   width: 25vw;
@@ -268,7 +279,7 @@ a {
   box-shadow: 2px 5px 15px 0px grey;
   border: none;
   cursor: pointer;
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 .header__btn:hover {
   opacity: 0.7;
