--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -16,7 +16,7 @@
     left: 50%;
     transform: translate(-50%, -40%);
     transition: transform 0.4s cubic-bezier(0.23, 1.83, 0.42, 1.19);
-    animation: visibility-filter 3s linear 1 forwards;
+    animation: visibility-spinner 3s linear 1 forwards;
 
     &__circle {
         width: 25vw;
@@ -90,8 +90,7 @@
     }
 
     &__btn {
-        // display: inline-block;
-        // text-decoration: none;
+
         color: white;
         max-width: 450px;
         background: linear-gradient($secondary_colour, $primary_colour);
@@ -102,7 +101,7 @@
         box-shadow: 2px 5px 15px 0px grey;
         border: none;
         cursor: pointer;
-        font-size: 1.1rem;
+        font-size: 1rem;
 
         &:hover {
             opacity: 0.7;
